--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,12 @@ export(bags_to_tfidf)
 export(col_means)
 export(cosine_dist)
 export(cosine_sim)
+export(early_abandoned_dist)
+export(euclidean_dist)
+export(find_discords_brute_force)
+export(find_discords_hot_sax)
 export(idx_to_letter)
+export(is_equal_mindist)
 export(is_equal_str)
 export(letter_to_idx)
 export(letters_to_idx)
